xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__value_lt_true.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "&run(\"1 lt 2\")"
---
Atomic(
    Boolean(
        true,
    ),
)
