xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__value_ne_false.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "&run(\"1 ne 1\")"
---
Atomic(
    Boolean(
        false,
    ),
)
