xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__value_ne_true.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "&run(\"1 ne 2\")"
---
Atomic(
    Boolean(
        true,
    ),
)
